test/static/wrong/case6.kk.out
test/static/wrong/case6.kk(5,15): error: type ainT should be cased as aint