test/static/wrong/case6.kk
// case sensitivity
import moda = static/modA
import static/modB

alias wrong = moda/ainT
